--- a/birthday-wish/src/app/biography/biography.component.css
+++ b/birthday-wish/src/app/biography/biography.component.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Charm:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Delius&display=swap');
 
 html, body {
   margin: 0;
@@ -34,8 +34,8 @@ html, body {
 }
 
 .bio-text {
-  font-family: 'Caveat', cursive;
-  font-size: 1.5rem;
+  font-family: "Delius", cursive;
+  font-size: 1.2rem;
   line-height: 2.2rem;
   color: #5a3921;
   /* Removed height: 100% */
