--- a/birthday-wish/src/app/favorites/favorites.component.html
+++ b/birthday-wish/src/app/favorites/favorites.component.html
@@ -44,7 +44,7 @@
 
     <!-- Back to Home Button -->
     <div class="mt-5 text-start">
-      <a href="index.html" class="btn btn-custom  mb-4">
+      <a href="/home" class="btn btn-custom  mb-4">
         ← Back
       </a>
     </div>
