--- a/birthday-wish/src/app/why/why.component.html
+++ b/birthday-wish/src/app/why/why.component.html
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div class="mt-5 text-start">
-      <a href="index.html" class="btn btn-custom  mb-4">
+      <a href="/home" class="btn btn-custom  mb-4">
         ← Back
       </a>
     </div>
